added some information

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -52,6 +52,15 @@
         <hr>
         
     </div>
+
+    <div class="third"> 
+        <p> using all the languages and tools together gives us the ability to make intricate website and services that can make a change  <br>
+            Aside from the tools mentioned, there are many frameworks and packages that accompany these to make the life of the developer <br>
+            much easier.            
+        </p>
+
+
+    </div>
     
 </body>
 </html>
